digits_vectorized_fixed/hls_component/accelerator/hls/csim/report/accelerator_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch CLANG as the compiler.
   Compiling ../../../../../activation.cpp in debug mode
csim.mk:112: recipe for target 'obj/activation.o' failed
In file included from ../../../../../activation.cpp:6:
In file included from ../../../../../activations.h:7:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_fixed.h:9:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis_HLS/2024.1/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../activation.cpp:104:23: error: call to 'isinf' is ambiguous
    if (sum == 0.0 || std::isinf(sum)) {
                      ^~~~~~~~~~
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:584:3: note: candidate function
  isinf(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:592:3: note: candidate function
  isinf(double __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:597:3: note: candidate function
  isinf(long double __x)
  ^
../../../../../activation.cpp:42:37: error: call to 'exp' is ambiguous
        output[i][0] = 1.0 / (1.0 + std::exp(-net[i][0]));
                                    ^~~~~~~~
../../../../../activation.cpp:144:50: note: in instantiation of function template specialization 'sigmoid<64>' requested here
template std::array<std::array<fixed_16, 1>, 64> sigmoid<64>(std::array<std::array<fixed_16, 1>, 64>&);
                                                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:42:37: error: call to 'exp' is ambiguous
        output[i][0] = 1.0 / (1.0 + std::exp(-net[i][0]));
                                    ^~~~~~~~
../../../../../activation.cpp:145:49: note: in instantiation of function template specialization 'sigmoid<8>' requested here
template std::array<std::array<fixed_16, 1>, 8> sigmoid<8>(std::array<std::array<fixed_16, 1>, 8>&);
                                                ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:42:37: error: call to 'exp' is ambiguous
        output[i][0] = 1.0 / (1.0 + std::exp(-net[i][0]));
                                    ^~~~~~~~
../../../../../activation.cpp:146:50: note: in instantiation of function template specialization 'sigmoid<10>' requested here
template std::array<std::array<fixed_16, 1>, 10> sigmoid<10>(std::array<std::array<fixed_16, 1>, 10>&);
                                                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:98:24: error: call to 'exp' is ambiguous
        output[i][0] = std::exp(net[i][0] - maxLogit);
                       ^~~~~~~~
../../../../../activation.cpp:149:50: note: in instantiation of function template specialization 'softmax<64>' requested here
template std::array<std::array<fixed_16, 1>, 64> softmax<64>(std::array<std::array<fixed_16, 1>, 64>&);
                                                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:118:13: error: call to 'isnan' is ambiguous
        if (std::isnan(output[i][0])) {
            ^~~~~~~~~~
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:611:3: note: candidate function
  isnan(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:619:3: note: candidate function
  isnan(double __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:624:3: note: candidate function
  isnan(long double __x)
  ^
../../../../../activation.cpp:98:24: error: call to 'exp' is ambiguous
        output[i][0] = std::exp(net[i][0] - maxLogit);
                       ^~~~~~~~
../../../../../activation.cpp:150:49: note: in instantiation of function template specialization 'softmax<8>' requested here
template std::array<std::array<fixed_16, 1>, 8> softmax<8>(std::array<std::array<fixed_16, 1>, 8>&);
                                                ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:118:13: error: call to 'isnan' is ambiguous
        if (std::isnan(output[i][0])) {
            ^~~~~~~~~~
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:611:3: note: candidate function
  isnan(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:619:3: note: candidate function
  isnan(double __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:624:3: note: candidate function
  isnan(long double __x)
  ^
../../../../../activation.cpp:98:24: error: call to 'exp' is ambiguous
        output[i][0] = std::exp(net[i][0] - maxLogit);
                       ^~~~~~~~
../../../../../activation.cpp:151:50: note: in instantiation of function template specialization 'softmax<10>' requested here
template std::array<std::array<fixed_16, 1>, 10> softmax<10>(std::array<std::array<fixed_16, 1>, 10>&);
                                                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/math.h:188:18: note: candidate function
  double __cdecl exp(double _X);
                 ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:222:3: note: candidate function
  exp(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:226:3: note: candidate function
  exp(long double __x)
  ^
../../../../../activation.cpp:118:13: error: call to 'isnan' is ambiguous
        if (std::isnan(output[i][0])) {
            ^~~~~~~~~~
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:611:3: note: candidate function
  isnan(float __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:619:3: note: candidate function
  isnan(double __x)
  ^
C:/Xilinx/Vitis_HLS/2024.1/tps/mingw/10.0.0/win64.o/nt/include/c++/9.5.0/cmath:624:3: note: candidate function
  isnan(long double __x)
  ^
1 warning and 10 errors generated.
make: *** [obj/activation.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
